--- a/bunsan/bacs/archive/PKGBUILD
+++ b/bunsan/bacs/archive/PKGBUILD
@@ -10,7 +10,7 @@ groups=()
 depends=(
   'bunsan.process-git'
   'bunsan.utility-git'
-  'bunsan.network-git'
+  'bunsan.crypto-git'
   'bunsan.web-git'
   'bunsan.pm-git'
   'bunsan.protobuf-git'
