--- a/bunsan/bacs/problem_plugins/single/PKGBUILD
+++ b/bunsan/bacs/problem_plugins/single/PKGBUILD
@@ -13,7 +13,12 @@ depends=(
     'bunsan.bacs.problem-git'
     'libmariadbclient'
 )
-makedepends=('git' 'cmake' 'boost')
+makedepends=(
+  'git'
+  'cmake'
+  'boost'
+  'turtle'
+)
 provides=()
 conflicts=()
 replaces=()
