--- a/bunsan/broker/PKGBUILD
+++ b/bunsan/broker/PKGBUILD
@@ -1,5 +1,5 @@
 # Maintainer: Aleksey Filippov <sarum9in@gmail.com>
-pkgname=bunsan.broker-git
+pkgname='bunsan.broker-git'
 pkgver=0.0.0
 pkgrel=1
 pkgdesc="bunsan broker"
@@ -22,6 +22,7 @@ makedepends=(
   'bunsan.cmake-git'
   'git'
   'boost'
+  'turtle'
 )
 provides=()
 conflicts=()
