--- a/bunsan/worker/PKGBUILD
+++ b/bunsan/worker/PKGBUILD
@@ -1,5 +1,5 @@
 # Maintainer: Aleksey Filippov <sarum9in@gmail.com>
-pkgname=bunsan.worker-git
+pkgname='bunsan.worker-git'
 pkgver=0.0.0
 pkgrel=1
 pkgdesc="bunsan worker"
