bunsan: testing -> test.

--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,7 @@ pkg
 /bunsan/pm_python/python-bunsan.pm-git/
 /bunsan/process/bunsan.process-git/
 /bunsan/protobuf/bunsan.protobuf-git/
-/bunsan/testing/bunsan.testing-git/
+/bunsan/test/bunsan.test-git/
 /bunsan/utility/bunsan.utility-git/
 /bunsan/web/bunsan.web-git/
 /bunsan/worker/bunsan.worker-git/
