--- a/bunsan/common/PKGBUILD
+++ b/bunsan/common/PKGBUILD
@@ -10,7 +10,7 @@ groups=()
 depends=('boost-libs')
 makedepends=(
   'bunsan.cmake-git'
-  'bunsan.testing-git'
+  'bunsan.test-git'
   'git'
   'boost'
   'turtle'
