--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "turtle"]
 	path = turtle
 	url = git@github.com:sarum9in-aur/turtle.git
+[submodule "boost.dll-git"]
+	path = boost.dll-git
+	url = git@github.com:sarum9in-aur/boost.dll-git.git
