Fixed bunsan.bacs.system.single-git package.

--- a/bunsan/bacs/system_plugins/single/PKGBUILD
+++ b/bunsan/bacs/system_plugins/single/PKGBUILD
@@ -9,6 +9,7 @@ license=('GPL')
 groups=()
 depends=(
     'bunsan.protobuf-git'
+    'bunsan.broker-git'
     'bunsan.bacs.system-git'
     'bunsan.bacs.problem.single-git'
 )
