Fixed bunsan.bacs.system-git dependencies.

--- a/bunsan/bacs/system/PKGBUILD
+++ b/bunsan/bacs/system/PKGBUILD
@@ -10,6 +10,7 @@ groups=()
 depends=(
   'bunsan.protobuf-git'
   'bunsan.bacs.common-git'
+  'bunsan.bacs.problem-git'
   'xmlrpc-c'
 
   'python2'
