Fixed bunsan.bacs.statement_provider-git dependencies.

--- a/bunsan/bacs/statement_provider/PKGBUILD
+++ b/bunsan/bacs/statement_provider/PKGBUILD
@@ -13,6 +13,7 @@ depends=(
   'bunsan.pm-git'
   'bunsan.protobuf-git'
   'bunsan.bacs.problems-git'
+  'botan'
 )
 makedepends=(
   'bunsan.cmake-git'
