--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,6 @@
 [submodule "php-grpc"]
 	path = php-grpc
 	url = git@github.com:sarum9in-aur/php-grpc.git
+[submodule "cppcms"]
+	path = cppcms
+	url = git@github.com:sarum9in-aur/cppcms.git
