--- a/bunsan/bacs/archive/PKGBUILD
+++ b/bunsan/bacs/archive/PKGBUILD
@@ -14,6 +14,7 @@ depends=(
   'bunsan.web-git'
   'bunsan.pm-git'
   'bunsan.protobuf-git'
+  'bunsan.rpc-git'
   'bunsan.bacs.problems-git'
 )
 makedepends=(
