Fixed yandex.contest.invoker-git package: added timezone to lxc.conf.

--- a/yandex-contest/invoker/lxc.conf
+++ b/yandex-contest/invoker/lxc.conf
@@ -230,6 +230,13 @@
                     "path": "/dev/stderr",
                     "value": "/proc/self/fd/2"
                 }
+            },
+            {
+                "SymLink":
+                {
+                    "path": "/etc/localtime",
+                    "value": "/usr/share/zoneinfo/UTC"
+                }
             }
         ]
     }
