Updated yandex.contest.invoker-git package.

--- a/yandex-contest/invoker/lxc.conf
+++ b/yandex-contest/invoker/lxc.conf
@@ -22,6 +22,13 @@
                 "/sys/fs/cgroup/devices /sys/fs/cgroup/devices none bind 0 0"
             ]
         },
+        "network":
+        [
+            {
+                "type": "empty",
+                "flags": "up"
+            }
+        ],
         "cgroup":
         {
             "memory.limit_in_bytes": "1G",
