Renamed packages bunsan.bacs.* -> bacs.*.

--- a/.gitignore
+++ b/.gitignore
@@ -17,15 +17,17 @@ PKGBUILD.bak
 /bacs/legacy/web/bacs.web.legacy-git/
 /bacs/legacy/web/contrib/
 /bacs/legacy/web/PHPMailer/
-/bunsan/bacs/archive/bunsan.bacs.archive-git/
-/bunsan/bacs/common/bunsan.bacs.common-git/
-/bunsan/bacs/external/bunsan.bacs.external-git/
-/bunsan/bacs/problem/bunsan.bacs.problem-git/
-/bunsan/bacs/problem_plugins/single/bunsan.bacs.problem.single-git/
-/bunsan/bacs/problems/bunsan.bacs.problems-git/
-/bunsan/bacs/statement_provider/bunsan.bacs.statement_provider-git/
-/bunsan/bacs/system/bunsan.bacs.system-git/
-/bunsan/bacs/system_plugins/single/bunsan.bacs.system.single-git/
+
+/bacs/archive/bacs.archive-git/
+/bacs/common/bacs.common-git/
+/bacs/external/bacs.external-git/
+/bacs/problem/bacs.problem-git/
+/bacs/problem_plugins/single/bacs.problem.single-git/
+/bacs/problems/bacs.problems-git/
+/bacs/statement_provider/bacs.statement_provider-git/
+/bacs/system/bacs.system-git/
+/bacs/system_plugins/single/bacs.system.single-git/
+
 /bunsan/broker/bunsan.broker-git/
 /bunsan/cmake/bunsan.cmake-git/
 /bunsan/common/bunsan.common-git/
