--- a/bacs/system_plugins/single/PKGBUILD
+++ b/bacs/system_plugins/single/PKGBUILD
@@ -1,32 +1,31 @@
 # Maintainer: Aleksey Filippov <sarum9in@gmail.com>
-pkgname='bunsan.bacs.common-git'
+pkgname='bacs.system.single-git'
 pkgver=0.0.0
 pkgrel=1
-pkgdesc="BACS commons"
+pkgdesc="bacs/system/single plugin"
 arch=('i686' 'x86_64')
-url="https://github.com/bunsanorg/bacs_common"
+url="https://github.com/bacsorg/system_single"
 license=('GPL')
 groups=()
 depends=(
-  'bunsan.common-git'
-  'bunsan.process-git'
-  'bunsan.utility-git'
-  'bunsan.curl-git'
-  'bunsan.protobuf-git'
+    'bunsan.protobuf-git'
+    'bunsan.broker-git'
+    'bacs.system-git'
+    'bacs.problem.single-git'
 )
 makedepends=(
-  'bunsan.cmake-git'
   'git'
+  'cmake'
   'boost'
   'turtle'
 )
 provides=()
-conflicts=()
-replaces=()
+conflicts=('bunsan.bacs.system.single-git')
+replaces=('bunsan.bacs.system.single-git')
 backup=()
 options=()
 install=
-source=("$pkgname::git://github.com/bunsanorg/bacs_common.git")
+source=("$pkgname::git://github.com/bacsorg/system_single.git")
 noextract=()
 md5sums=('SKIP')
 
@@ -44,7 +43,7 @@ build() {
 
 check() {
   cd "$srcdir/$pkgname/build"
-  #make test ARGS=--output-on-failure
+  make test ARGS=--output-on-failure
 }
 
 package() {
