--- a/bunsan/broker/PKGBUILD
+++ b/bunsan/broker/PKGBUILD
@@ -29,7 +29,7 @@ replaces=()
 backup=()
 options=()
 install=
-source=("$pkgname::git://github.com/bunsanorg/broker.git")
+source=("$pkgname::git+https://github.com/bunsanorg/broker.git")
 noextract=()
 md5sums=('SKIP')
 
