--- a/bacs/system_plugins/single/PKGBUILD
+++ b/bacs/system_plugins/single/PKGBUILD
@@ -25,7 +25,7 @@ replaces=('bunsan.bacs.system.single-git')
 backup=()
 options=()
 install=
-source=("$pkgname::git://github.com/bacsorg/system_single.git")
+source=("$pkgname::git+https://github.com/bacsorg/system_single.git")
 noextract=()
 md5sums=('SKIP')
 
