--- a/bunsan/curl/PKGBUILD
+++ b/bunsan/curl/PKGBUILD
@@ -24,7 +24,7 @@ replaces=()
 backup=()
 options=()
 install=
-source=("$pkgname::git://github.com/bunsanorg/curl.git")
+source=("$pkgname::git+https://github.com/bunsanorg/curl.git")
 noextract=()
 md5sums=('SKIP')
 
