--- a/bunsan/utility/PKGBUILD
+++ b/bunsan/utility/PKGBUILD
@@ -23,7 +23,7 @@ replaces=()
 backup=()
 options=()
 install=
-source=("$pkgname::git://github.com/bunsanorg/utility.git")
+source=("$pkgname::git+https://github.com/bunsanorg/utility.git")
 noextract=()
 md5sums=('SKIP')
 
