--- a/cppzmq/PKGBUILD
+++ b/cppzmq/PKGBUILD
@@ -15,7 +15,7 @@ replaces=()
 backup=()
 options=()
 install=
-source=("$pkgname::git://github.com/zeromq/cppzmq.git")
+source=("$pkgname::git+https://github.com/zeromq/cppzmq.git")
 noextract=()
 md5sums=('SKIP')
 
