--- a/yandex-contest/invoker-compat-common/PKGBUILD
+++ b/yandex-contest/invoker-compat-common/PKGBUILD
@@ -21,7 +21,7 @@ replaces=()
 backup=()
 options=()
 install=
-source=("$pkgname::git://github.com/bunsanorg/yandex_contest_invoker_compat_common.git")
+source=("$pkgname::git+https://github.com/bunsanorg/yandex_contest_invoker_compat_common.git")
 noextract=()
 md5sums=('SKIP')
 
