--- a/yandex-contest/system/PKGBUILD
+++ b/yandex-contest/system/PKGBUILD
@@ -24,7 +24,7 @@ replaces=()
 backup=()
 options=()
 install=
-source=("$pkgname::git://github.com/bunsanorg/yandex_contest_system.git")
+source=("$pkgname::git+https://github.com/bunsanorg/yandex_contest_system.git")
 noextract=()
 md5sums=('SKIP')
 
