--- a/.gitmodules
+++ b/.gitmodules
@@ -1,54 +1,54 @@
 [submodule "czmq"]
 	path = czmq
-	url = git@github.com:sarum9in-aur/czmq.git
+	url = https://github.com/sarum9in-aur/czmq.git
 [submodule "grpc"]
 	path = grpc
-	url = git@github.com:sarum9in-aur/grpc.git
+	url = https://github.com/sarum9in-aur/grpc.git
 [submodule "protobuf3"]
 	path = protobuf3
-	url = git@github.com:sarum9in-aur/protobuf3.git
+	url = https://github.com/sarum9in-aur/protobuf3.git
 [submodule "obnam/obnam-git"]
 	path = obnam/obnam-git
-	url = git@github.com:sarum9in-aur/obnam-git.git
+	url = https://github.com/sarum9in-aur/obnam-git.git
 [submodule "python-pika"]
 	path = python-pika
-	url = git@github.com:sarum9in-aur/python-pika.git
+	url = https://github.com/sarum9in-aur/python-pika.git
 [submodule "obnam/python2-cliapp-git"]
 	path = obnam/python2-cliapp-git
-	url = git@github.com:sarum9in-aur/python2-cliapp-git.git
+	url = https://github.com/sarum9in-aur/python2-cliapp-git.git
 [submodule "obnam/python2-larch-git"]
 	path = obnam/python2-larch-git
-	url = git@github.com:sarum9in-aur/python2-larch-git.git
+	url = https://github.com/sarum9in-aur/python2-larch-git.git
 [submodule "obnam/python2-tracing-git"]
 	path = obnam/python2-tracing-git
-	url = git@github.com:sarum9in-aur/python2-tracing-git.git
+	url = https://github.com/sarum9in-aur/python2-tracing-git.git
 [submodule "obnam/python2-ttystatus-git"]
 	path = obnam/python2-ttystatus-git
-	url = git@github.com:sarum9in-aur/python2-ttystatus-git.git
+	url = https://github.com/sarum9in-aur/python2-ttystatus-git.git
 [submodule "trellis-desk"]
 	path = trellis-desk
-	url = git@github.com:sarum9in-aur/trellis-desk.git
+	url = https://github.com/sarum9in-aur/trellis-desk.git
 [submodule "turtle"]
 	path = turtle
-	url = git@github.com:sarum9in-aur/turtle.git
+	url = https://github.com/sarum9in-aur/turtle.git
 [submodule "boost.dll-git"]
 	path = boost.dll-git
-	url = git@github.com:sarum9in-aur/boost.dll-git.git
+	url = https://github.com/sarum9in-aur/boost.dll-git.git
 [submodule "php-grpc"]
 	path = php-grpc
-	url = git@github.com:sarum9in-aur/php-grpc.git
+	url = https://github.com/sarum9in-aur/php-grpc.git
 [submodule "cppcms"]
 	path = cppcms
-	url = git@github.com:sarum9in-aur/cppcms.git
+	url = https://github.com/sarum9in-aur/cppcms.git
 [submodule "cppdb"]
 	path = cppdb
-	url = git@github.com:sarum9in-aur/cppdb.git
+	url = https://github.com/sarum9in-aur/cppdb.git
 [submodule "mingw-w64-gdbm"]
 	path = mingw-w64-gdbm
-	url = git@github.com:sarum9in-aur/mingw-w64-gdbm.git
+	url = https://github.com/sarum9in-aur/mingw-w64-gdbm.git
 [submodule "mingw-w64-python2"]
 	path = mingw-w64-python2
-	url = git@github.com:sarum9in-aur/mingw-w64-python2.git
+	url = https://github.com/sarum9in-aur/mingw-w64-python2.git
 [submodule "mingw-w64-python"]
 	path = mingw-w64-python
-	url = git@github.com:sarum9in-aur/mingw-w64-python.git
+	url = https://github.com/sarum9in-aur/mingw-w64-python.git
