Added turtle-git package.

--- a/.gitignore
+++ b/.gitignore
@@ -52,6 +52,7 @@ PKGBUILD.bak
 
 /czmqpp-git/czmqpp-git/
 /turtle/turtle-*.tar.bz2
+/turtle-git/turtle-git/
 
 /obnam/obnam-git/obnam-git/
 /obnam/python2-cliapp-git/python2-cliapp-git/
