Migrated to turtle-git.

--- a/bacs/external/PKGBUILD
+++ b/bacs/external/PKGBUILD
@@ -16,7 +16,7 @@ makedepends=(
   'bunsan.cmake-git'
   'git'
   'boost'
-  'turtle'
+  'turtle-git'
 )
 provides=()
 conflicts=('bunsan.bacs.external-git')
