--- a/bacs/common/PKGBUILD
+++ b/bacs/common/PKGBUILD
@@ -18,7 +18,7 @@ makedepends=(
   'bunsan.cmake-git'
   'git'
   'boost'
-  'turtle'
+  'turtle-git'
 )
 provides=()
 conflicts=('bunsan.bacs.common-git')
