--- a/bacs/statement_provider/PKGBUILD
+++ b/bacs/statement_provider/PKGBUILD
@@ -19,7 +19,7 @@ makedepends=(
   'bunsan.cmake-git'
   'git'
   'boost'
-  'turtle'
+  'turtle-git'
 )
 provides=()
 conflicts=('bunsan.bacs.statement_provider-git')
