--- a/bacs/legacy/backend/PKGBUILD
+++ b/bacs/legacy/backend/PKGBUILD
@@ -1,6 +1,6 @@
 # Maintainer: Aleksey Filippov <sarum9in@gmail.com>
 pkgname='bacs.legacy.backend-git'
-pkgver=131.cefb016
+pkgver=0.0.0
 pkgrel=1
 pkgdesc="BACS legacy backend"
 arch=('i686' 'x86_64')
@@ -31,10 +31,14 @@ conflicts=()
 replaces=()
 backup=()
 options=()
-install=
-source=("$pkgname::git+https://github.com/bacsorg/legacy_backend.git")
+install=bacs.legacy.backend-git.install
+source=(
+  "$pkgname::git+https://github.com/bacsorg/legacy_backend.git"
+  "bacsd@.service"
+)
 noextract=()
-md5sums=('SKIP')
+md5sums=('SKIP'
+         'afde3fa6fb5ed49661dfcac0cafd2a61')
 
 pkgver() {
   cd "$srcdir/$pkgname"
@@ -56,4 +60,7 @@ build() {
 package() {
   cd "$srcdir/$pkgname/build"
   make DESTDIR="$pkgdir/" install
+
+  install -dm 750 "${pkgdir}/srv/bacs"
+  install -Dm 644 "${srcdir}/bacsd@.service" "${pkgdir}/usr/lib/systemd/system/bacsd@.service"
 }
