Fixed protobuf references replacing protobuf3 by protobuf.

--- a/bunsan/broker/PKGBUILD
+++ b/bunsan/broker/PKGBUILD
@@ -14,7 +14,7 @@ depends=(
   'bunsan.crypto-git'
   'bunsan.pm-git'
   'bunsan.protobuf-git'
-  'python-protobuf3'
+  'python-protobuf'
   'python-pika'
 )
 makedepends=(
