--- a/bacs/kturle/PKGBUILD
+++ b/bacs/kturle/PKGBUILD
@@ -1,5 +1,5 @@
 # Maintainer: Mikhail Ivchenko <ematirov@gmail.com>
-pkgname='kturtle.interpreter-git'
+pkgname='bacs.kturtle-git'
 pkgver=943.2fcaeef
 pkgrel=1
 pkgdesc="Kturtle customized for BACS"
